<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb3_qlearning</name>
  <version>0.0.0</version>
  <description>Traditional Q-learning agent for TurtleBot3 navigation in Gazebo simulation</description>
  <maintainer email="shultanalis2004@gmail.com">mochshultan</maintainer>
  <license>Apache-2.0</license>

  <!-- Core dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>turtlebot3_msgs</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>ament_index_python</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
